--- a/java-api-imdb/pom.xml
+++ b/java-api-imdb/pom.xml
@@ -11,6 +11,12 @@
 	    <version>5.9.1</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.10</version>
+	</dependency>
+
   </dependencies>
   
   <build>
